tests/sksl/errors/Ossfuzz32851.dsl.glsl
### Compilation failed:

error: division by zero

error: expected 'int', but found 'int2'

2 errors
